--- a/_layouts/default.liquid
+++ b/_layouts/default.liquid
@@ -48,7 +48,7 @@
     </div>
 
     <!-- Footer -->
-    
+    {%- include footer.html %}
 
     <!-- JavaScripts -->
     {% include scripts.liquid %}
