--- a/_sass/_themes.scss
+++ b/_sass/_themes.scss
@@ -10,7 +10,7 @@
   --global-code-bg-color: #{$code-bg-color-light};
   --global-text-color: #{$black-color};
   --global-text-color-light: #{$grey-color};
-  --global-theme-color: #5e493d;
+  --global-theme-color: rgba((94,73,61));
   --global-hover-color: #{$purple-color};
   --global-hover-text-color: #{$white-color};
   --global-footer-bg-color: #{$grey-color-dark};
